--- a/SpringBootProject/thatknow/build.gradle
+++ b/SpringBootProject/thatknow/build.gradle
@@ -19,12 +19,18 @@ configurations {
 
 repositories {
 	mavenCentral()
+
+	flatDir {
+		dirs 'libs'
+	}
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation files('libs/json-simple-1.1.1.jar')
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
